--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> Lets Learn Quran Academy</title>
+    <title>Lets Learn Quran Academy</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       /* Custom scrollbar for webkit browsers */
@@ -73,7 +73,7 @@
         import ReactDOM from 'react-dom/client';
 
         // --- From constants.ts ---
-        const ADMIN_PASSWORD = 'Quran@#$123';
+        const ADMIN_PASSWORD = 'Quran@123';
         const STAFF_PASSWORD = '12345';
         
         // --- From components/Icons.tsx ---
