--- a/index.html
+++ b/index.html
@@ -1366,7 +1366,7 @@
             );
         };
 
-        const HistorySection = ({ user, callHistory, darkMode, onDeleteHistory }) => {
+        const HistorySection = ({ user, callHistory, darkMode, onDeleteHistory, onRefresh }) => {
             const [searchTerm, setSearchTerm] = useState('');
             const [nowPlaying, setNowPlaying] = useState(null);
             const [currentPage, setCurrentPage] = useState(1);
@@ -1612,10 +1612,36 @@
                 }
             };
 
+            const [isRefreshing, setIsRefreshing] = useState(false);
+            
+            const handleRefresh = async () => {
+                if (isRefreshing) return;
+                setIsRefreshing(true);
+                try {
+                    if (onRefresh) await onRefresh();
+                } catch (e) {
+                    console.error('Refresh error:', e);
+                } finally {
+                    setIsRefreshing(false);
+                }
+            };
+
             return (
                 <div className={`p-6 rounded-2xl shadow-sm border dark-transition ${darkMode ? 'bg-slate-800 border-slate-700' : 'bg-white border-slate-200/80'}`}>
                     <div className="flex flex-wrap items-center justify-between gap-4 mb-4">
-                        <h2 className={`text-lg font-bold ${darkMode ? 'text-white' : 'text-slate-800'}`}>Call Log ({filteredHistory.length} records)</h2>
+                        <div className="flex items-center gap-3">
+                            <h2 className={`text-lg font-bold ${darkMode ? 'text-white' : 'text-slate-800'}`}>Call Log ({filteredHistory.length} records)</h2>
+                            <button
+                                onClick={handleRefresh}
+                                disabled={isRefreshing}
+                                className={`p-2 rounded-lg transition-all duration-200 ${isRefreshing ? 'cursor-not-allowed opacity-50' : 'hover:scale-105'} ${darkMode ? 'bg-slate-700 text-slate-300 hover:bg-slate-600' : 'bg-slate-100 text-slate-600 hover:bg-slate-200'}`}
+                                title="Refresh call history"
+                            >
+                                <svg xmlns="http://www.w3.org/2000/svg" className={`w-4.5 h-4.5 ${isRefreshing ? 'animate-spin' : ''}`} fill="none" viewBox="0 0 24 24" stroke="currentColor" strokeWidth={2}>
+                                    <path strokeLinecap="round" strokeLinejoin="round" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15" />
+                                </svg>
+                            </button>
+                        </div>
                         
                         {/* Selection Controls - Only show for admin */}
                         {user.type === 'admin' && selectedItems.size > 0 && (
@@ -3928,7 +3954,18 @@
                             addCallToHistoryAPI={addCallToHistoryAPI}
                         />;
                     case 'history':
-                        return <HistorySection user={user} callHistory={callHistory} darkMode={darkMode} onDeleteHistory={handleDeleteHistory} />;
+                        return <HistorySection user={user} callHistory={callHistory} darkMode={darkMode} onDeleteHistory={handleDeleteHistory} onRefresh={async () => {
+                            try {
+                                const res = await fetch(`${BACKEND_URL}/api/call-history?limit=500`);
+                                const data = await res.json();
+                                if (data.success) {
+                                    setCallHistory(data.history.map(h => ({ ...h, id: h._id || h.id })));
+                                    console.log('🔄 Call history refreshed:', data.history.length, 'records');
+                                }
+                            } catch (err) {
+                                console.error('Refresh error:', err);
+                            }
+                        }} />;
                     case 'messages':
                         return <MessagesSection 
                             user={user} 
