--- a/index.html
+++ b/index.html
@@ -1634,12 +1634,13 @@
                             <button
                                 onClick={handleRefresh}
                                 disabled={isRefreshing}
-                                className={`p-2 rounded-lg transition-all duration-200 ${isRefreshing ? 'cursor-not-allowed opacity-50' : 'hover:scale-105'} ${darkMode ? 'bg-slate-700 text-slate-300 hover:bg-slate-600' : 'bg-slate-100 text-slate-600 hover:bg-slate-200'}`}
+                                className={`flex items-center gap-1.5 px-3 py-1.5 rounded-lg text-sm font-medium transition-all duration-200 ${isRefreshing ? 'cursor-not-allowed opacity-60' : 'hover:scale-105 active:scale-95'} ${darkMode ? 'bg-indigo-600 text-white hover:bg-indigo-500' : 'bg-indigo-500 text-white hover:bg-indigo-600'}`}
                                 title="Refresh call history"
                             >
-                                <svg xmlns="http://www.w3.org/2000/svg" className={`w-4.5 h-4.5 ${isRefreshing ? 'animate-spin' : ''}`} fill="none" viewBox="0 0 24 24" stroke="currentColor" strokeWidth={2}>
+                                <svg xmlns="http://www.w3.org/2000/svg" className={`w-4 h-4 ${isRefreshing ? 'animate-spin' : ''}`} fill="none" viewBox="0 0 24 24" stroke="currentColor" strokeWidth={2.5}>
                                     <path strokeLinecap="round" strokeLinejoin="round" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15" />
                                 </svg>
+                                <span>{isRefreshing ? 'Refreshing...' : 'Refresh'}</span>
                             </button>
                         </div>
                         
